--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^2.0.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
