feat: Configura seed do Prisma

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@prisma/client": "4.12.0",
     "@stitches/react": "^1.2.8",
-    "@types/node": "18.15.11",
+    "@types/node": "^18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
     "date-fns": "^2.29.3",
@@ -23,9 +23,14 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "devDependencies": {
-    "prisma": "^4.12.0"
+    "@types/uuid": "^9.0.1",
+    "prisma": "^4.12.0",
+    "ts-node": "^10.9.1"
   }
 }
