--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "4.12.0",
     "@stitches/react": "^1.2.8",
+    "@tanstack/react-query": "^4.29.1",
     "@types/node": "^18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
