--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
     "eslint": "8.38.0",
