--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "4.12.0",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@stitches/react": "^1.2.8",
     "@tanstack/react-query": "^4.29.1",
     "@types/node": "^18.15.11",
