--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "prestart": "prisma generate",
+    "start": "npx prisma migrate deploy && next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
+    "prisma": "^4.12.0",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,7 +36,6 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.1",
-    "prisma": "^4.12.0",
     "ts-node": "^10.9.1"
   }
 }
